<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_History_HMI" Id="{872ccca9-bede-4dc6-b7db-566268de70fe}">
    <Declaration><![CDATA[TYPE ST_History_HMI :
STRUCT
	iOK	:UDINT;
	iNOK :UDINT;
	bShift1	:BOOL;
	bShift2 :BOOL;
	bShift3 :BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>