<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Batch" Id="{09c12afd-3bc8-4810-b79e-928305e5884a}">
    <Declaration><![CDATA[TYPE ST_Batch :
STRUCT
	sBatchNumber		:STRING;
	sRecipeName			:STRING;
	sProductName		:STRING;
	sUser				:STRING;
	sStarted			:STRING;
	sFinished			:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>